estas son las pruebas restantes